--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -15,7 +15,7 @@ $font-size-base: 1rem;
 // $success:    $green;
 // $info:       $yellow;
 // $danger:     $red;
-$warning:    $orange;
+// $warning:    $orange;
 $background-color: white;
 
 // Buttons & inputs' radius
