--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,22 +11,32 @@
   <ul class="SocialLinks">
     <li>
       <a href="http://twitter.com/juanesbravoa">
-        <img src="static/images/logos/twitter.png" alt="Twitter">
+        <%= image_tag('home/twitter.png') %>
+        <%# <img src="home/twitter.png" alt="Twitter"> %>
       </a>
     </li>
     <li>
       <a href="http://www.linkedin.com/in/juanesbravo/">
-        <img src="static/images/logos/linkedin.png" alt="Linkedin">
+        <%= image_tag('home/linkedin.png') %>
+        <%# <img src="static/images/logos/linkedin.png" alt="Linkedin"> %>
+      </a>
+    </li>
+    <li>
+    <li>
+      <a href="https://github.com/juanestebanba">
+        <%= image_tag('home/github.png') %>
       </a>
     </li>
     <li>
       <a href="http://www.youtube.com/channel/UCNeLkQHnI4Yjh_o8hZGByXA">
-        <img src="static/images/logos/youtube.png" alt="Youtube">
+        <%= image_tag('home/youtube.png') %>
+        <%# <img src="static/images/logos/youtube.png" alt="Youtube"> %>
       </a>
     </li>
      <li>
       <a href="https://mailhide.io/e/FD7wy3AL">
-        <img src="static/images/logos/email.png" alt="Email">
+        <%= image_tag('home/email.png') %>
+        <%# <img src="static/images/logos/email.png" alt="Email"> %>
       </a>
     </li>
   </ul>
