--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,13 @@
  *= require_self
  */
 
+
+
+html {
+  font-size: 62.5%;
+}
+
+
 // Graphical variables:
 @import "config/fonts";
 // @import "config/colors";
