--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
         </a>
       </h1>
     </div>
-    <ul class="nav-list" id="navi-list">
+    <ul class="nav-list active" id="navi-list">
       <li class="list-item">
         <a href="/about/">
           About
