--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,9 +9,7 @@
     </div>
     <ul class="nav-list active" id="navi-list">
       <li class="list-item">
-        <a href="/about/">
-          About
-        </a>
+        <%= link_to "About", about_path %>
       </li>
       <li class="list-item">
         <a href="/writing/">
