--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,19 +12,13 @@
         <%= link_to "About", about_path %>
       </li>
       <li class="list-item">
-        <a href="/writing/">
-          Writing
-        </a>
+        <%= link_to "Writing", writing_path %>
       </li>
       <li class="list-item">
-        <a href="/podcast/">
-          Podcast
-        </a>
+        <%= link_to "Podcast", podcast_path %>
       </li>
       <li class="list-item">
-        <a href="/bookshelf/">
-          BookShelf
-        </a>
+        <%= link_to "Bookshelf", books_path %>
       </li>
     </ul>
     <div class="menu" id="toggle-button">
