Installed active text and migrations

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,8 @@
-  <div class="bookshelf-books-content">
+<div class="individual-book-content">
+  <h2 class="individual-book-title">
     <%= @book.name %>
-    </div>
-  <div class="bookshelf-book-snippet">
+  </div>
+  <div class="individual-book-notes">
     <%= @book.notes %>
   </div>
+</div>
