--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -19,8 +19,8 @@ $font-size-base: 1rem;
 $background-color: white;
 
 // Buttons & inputs' radius
-// $border-radius:    2px;
-// $border-radius-lg: 2px;
-// $border-radius-sm: 2px;
+$border-radius:    2px;
+$border-radius-lg: 2px;
+$border-radius-sm: 2px;
 
 // Override other variables below!
