--- a/app/views/users/books/_form.html.erb
+++ b/app/views/users/books/_form.html.erb
@@ -48,7 +48,7 @@
 
   <div class="form-group">
     <%= form.label :Notes %>
-    <%= form.text_area :notes, class: "form-control" %>
+    <%= form.rich_text_area :rich_notes, class: "form-control" %>
     <%# <%= form.rich_text_area :rich_notes, class: "form-control" %>
   </div>
 
