--- a/app/views/users/books/show.html.erb
+++ b/app/views/users/books/show.html.erb
@@ -3,6 +3,6 @@
     <%= @book.name %>
   </div>
   <div class="individual-book-notes">
-    <%= @book.notes %>
+    <%= @book.rich_notes %>
   </div>
 </div>
