--- a/app/views/users/books/_form.html.erb
+++ b/app/views/users/books/_form.html.erb
@@ -1,19 +1,3 @@
-<%# <%= simple_form_for(@book) do |f| %>
-
-  <%# <div class="form-inputs card border-secondary shadow p-3 mb-5 bg-body rounded"> %>
-    <%# <%= f.input :name %>
-    <%# <%= f.input :rating_text %>
-    <%# <%= f.input :rating_number %>
-    <%# <%= f.input :short_description %>
-    <%# <%= f.rich_text_area :rich_notes %>
-    <%# <%= f.input :category %>
-  <%# </div> %>
-
-  <%# <div class="form-actions">
-    <%= f.button :submit, class:"btn btn-primary" %>
-  <%# </div>
-<% end %>
-
 <%= form_with(model: book) do |form| %>
   <div class="form-group">
     <%= form.label :name %>
@@ -21,13 +5,13 @@
   </div>
 
   <div class="form-group">
-    <%= form.label :rating_text %>
+    <%= form.label :rating_text, "Rating text (e.g '7/10')" %>
     <%= form.text_field :rating_text, class: "form-control" %>
   </div>
 
   <div class="form-group">
     <%= form.label :rating_number %>
-    <%= form.number_field :rating_number, class: "form-control" %>
+    <%= form.number_field :rating_number, in: 1..10, class: "form-control" %>
   </div>
 
   <div class="form-group">
@@ -53,7 +37,7 @@
   </div>
 
   <div class="actions">
-    <%= form.submit class: "btn btn-primary btn-block" %>
+    <%= form.submit class: "form-btn" %>
   </div>
 
 <% end %>
