--- a/app/views/users/books/new.html.erb
+++ b/app/views/users/books/new.html.erb
@@ -1,13 +1,9 @@
-<%= link_to 'Back', books_path, class: 'btn btn-secondary mb-3' %>
-<div class="row">
-  <div class="col-md-3">
-    <div class="card">
-      <div class="card-body">
-        <h4 class="card-title">New Book</h4>
-          <%= render 'form', book: @book%>
-      </div>
-    </div>
-  </div>
 
-  </div>
+
+
+
+<div class="form-container">
+<%= link_to 'Back', books_path, class: 'btn' %>
+<h4 class="form-title">Create a new book</h4>
+  <%= render 'form', book: @book%>
 </div>
