--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
         <%= link_to "About", about_path %>
       </li>
       <li class="list-item">
-        <%= link_to "Writing", writing_path %>
+        <%= link_to "Writing", posts_path %>
       </li>
       <li class="list-item">
         <%= link_to "Podcast", podcast_path %>
