post page and forms

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,4 +4,6 @@
 @import "actiontext";
 @import "forms";
 @import "registration_forms";
+@import "buttons";
+@import "posts_forms";
 // @import "footer";
