--- a/app/views/users/books/new.html.erb
+++ b/app/views/users/books/new.html.erb
@@ -1,5 +1,5 @@
 <div class="form-container">
-<%= link_to 'Back', books_path, class: 'btn' %>
+<%= link_to 'Back', books_path, class: 'back-btn' %>
 <h4 class="form-title">Create a new book</h4>
   <%= render 'form', book: @book%>
 </div>
