--- a/app/views/users/posts/_form.html.erb
+++ b/app/views/users/posts/_form.html.erb
@@ -11,17 +11,17 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="posts-form-group">
     <%= form.label :title %>
-    <%= form.text_field :title %>
+    <%= form.text_field :title, class: 'posts-form-control' %>
   </div>
 
-  <div class="field">
+  <div class="posts-form-group">
     <%= form.label :description %>
-    <%= form.text_area :description %>
+    <%= form.text_area :description, class: 'posts-form-control' %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class: 'btn-blog-form' %>
   </div>
 <% end %>
