--- a/app/views/users/posts/index.html.erb
+++ b/app/views/users/posts/index.html.erb
@@ -6,7 +6,7 @@
 
 
   <% @posts.each do |post| %>
-    <%= link_to post, class: "post-card-link" do %>
+    <%= link_to edit_post_path(post), class: "post-card-link" do %>
       <div class="post-card">
         <div class="post-card-body">
           <h5 class="post-card-title"><%= post.title %></h5>
