--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -19,6 +19,7 @@
   // width: 100%;
 }
 
+
 .form-group label {
   display: block;
   margin-bottom: 0.5rem;
@@ -28,6 +29,10 @@
 .form-group input {
   width: 100%;
   height: 3rem;
+}
+
+.form-control {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 textarea {
