--- a/app/views/users/books/_form.html.erb
+++ b/app/views/users/books/_form.html.erb
@@ -26,8 +26,9 @@
 
   <div class="form-group">
     <%= form.label :author_id %>
+    <%# <%= form.text_field :author_name, class: "form-control" %>
     <%= form.number_field :author_id, class: "form-control" %>
-    <%# <%= form.rich_text_area :rich_notes, class: "form-control" %>
+    # <%# <%= form.rich_text_area :rich_notes, class: "form-control" %>
   </div>
 
   <div class="form-group">
