--- a/app/views/users/books/edit.html.erb
+++ b/app/views/users/books/edit.html.erb
@@ -1,28 +1,13 @@
-<div class="row">
-  <div class="col-md-3">
-    <%= link_to 'Back', books_path, class: 'btn btn-secondary mb-3' %>
+<div class="form-container">
+<%# <div class="row">
+  <div class="col-md-3"> %>
+    <%= link_to 'Back', books_path, class: 'back-btn' %>
+    <h4 class="form-title">Edit book</h4>
     <div class="card">
       <div class="card-body">
-        <h4 class="card-title">New Book</h4>
-          <%= render 'form', book: @book%>
+        <%= render 'form', book: @book%>
       </div>
     </div>
-  </div>
-  <%# <div class="col-md-9">
-    <div class="mb-3">
-      <%= form_with(model: [@book, @paragraph]) do |form|%>
-        <%# <%= form.hidden_field :element_type, value: 'paragraph' %>
-        <%# <%= form.submit 'Paragraph', class: 'btn btn-primary' %>
-      <%# <% end %>
-    <%# </div> %>
-
-    <%# <% @book.elements.each do |element| %>
-     <%# <% if element.persisted? %>
-        <%# <%= form_with(model: [@book, element]) do |form| %>
-          <%# <%= form.text_area :notes %>
-          <%# <%= form.submit "Save", class: 'btn btn-primary' %>
-        <%# <% end %>
-      <%# <% end %>
-    <%# <% end %>
-  <%# </div> %>
+  <%# </div>
+</div> %>
 </div>
