--- a/app/views/users/books/_form.html.erb
+++ b/app/views/users/books/_form.html.erb
@@ -25,10 +25,11 @@
   </div>
 
   <div class="form-group">
-    <%= form.label :author_id %>
+    <%= form.label :author_name %>
+    <%= form.collection_select :author_id, Author.order(:name), :id, :name %>
     <%# <%= form.text_field :author_name, class: "form-control" %>
-    <%= form.number_field :author_id, class: "form-control" %>
-    # <%# <%= form.rich_text_area :rich_notes, class: "form-control" %>
+    <%# <%= form.number_field :author_id, class: "form-control" %>
+    <%# <%= form.rich_text_area :rich_notes, class: "form-control" %>
   </div>
 
   <div class="form-group">
